# SNN-RL

./: .gitignore  README.md  SpikingNeuroController.py  abstractcritic.py  actor.py  agent.py  connectome.py  critic.py  draw.py  dumpload.py  dumpload_test.py  exp.py  fremauxfilter.py  globalvalues.py  gridsearch.sh  gridsearchLF.sh  lineFollowingEnvironment.py  lineFollowingEnvironment2.py  nestdockerrun.sh  pyproject.toml  requirements.txt  rstdp_imp_test.py  rsync.sh  rsync_from_server.sh  settings.py  single.sh  singleLF.sh  symbolicactor.py  test_physical_sledge.py  utilityTest.py  webserv.py
.github/workflows/: main.yml
actors/: actor.py  actor_comparator.py  connectome.py  fremauxfilter.py  insimor_simple.py  numericpyactor.py  spiking_nest.py  trainable.py
environments/: RealPoleBalancing.py  lineFollowingEnvironment.py  lineFollowingEnvironment2.py
experiments/: amplificationtest.py  fullynet.py  lf_absolutenet.py  lf_placecells.py  lf_relative_prewired.py  lf_simplified.py  polebalancing.py  polebalancing_simplified.py  polebalancing_simplified_numeric.py  polebalancing_simplified_real.py
gridsearch/: gridsearch.json  vq.json
models/: trainingrun.py
templates/: index.html  render.js
